<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#65C9FF"
            android:contentDescription="@string/traveloka"
            app:srcCompat="@drawable/traveloka_logo" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="228dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/diskon"
            app:srcCompat="@drawable/diskon" />

    </RelativeLayout>



    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="#65C9FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/home"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/akun"
            app:srcCompat="@drawable/user" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|end"
            android:contentDescription="@string/pesanan"
            app:srcCompat="@drawable/book" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/tampilkan_lebih_banyak"
        android:textColor="#42A5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="242dp"
        android:layout_marginRight="242dp"
        android:text="@string/halo_selamat_datang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/nama"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:layout_span="3"
            android:background="@drawable/plane" />

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:layout_span="3"
            android:background="@drawable/train" />

        <Button
            android:id="@+id/button11"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:layout_span="3"
            android:background="@drawable/bus" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:layout_span="3"
            android:background="@drawable/car" />
    </TableRow>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/pesawat"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/kereta"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/bus"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/mobil"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

</androidx.constraintlayout.widget.ConstraintLayout>